[gd_scene load_steps=25 format=3 uid="uid://bw4u5qtf6bv0m"]

[ext_resource type="PackedScene" uid="uid://ca8ot8h50lgrg" path="res://entities/enemies/base_enemy/base_enemy.tscn" id="1_oapbr"]
[ext_resource type="Resource" uid="uid://8otmmhk675k0" path="res://entities/enemies/ball_chicken/ball_chicken_stats.tres" id="2_v7541"]
[ext_resource type="PackedScene" uid="uid://c8vfuyjik63dg" path="res://entities/enemies/ball_chicken/art/ball_chicken.glb" id="3_2hblk"]
[ext_resource type="Script" uid="uid://cefytwqnqbwfy" path="res://entities/enemies/base_enemy/enemy_states/wander_state.gd" id="5_2ly6u"]
[ext_resource type="Script" uid="uid://bug6qlgvqnkwb" path="res://entities/enemies/base_enemy/enemy_states/idle_state.gd" id="5_8q87k"]
[ext_resource type="Script" uid="uid://cg3ydmohgja7v" path="res://entities/enemies/base_enemy/enemy_states/chase_state.gd" id="6_lvw3e"]
[ext_resource type="Script" uid="uid://b4agifrlvcnfd" path="res://entities/enemies/ball_chicken/enemy_ability_controller.gd" id="7_3n7t4"]
[ext_resource type="Script" uid="uid://ulhuksdmjxtn" path="res://entities/enemies/ball_chicken/enemy_ability_slot.gd" id="8_nnmdb"]
[ext_resource type="Resource" uid="uid://dx4h8wfqycags" path="res://entities/abilities/ability_models/ground_pound/ground_pound.tres" id="10_2hblk"]
[ext_resource type="Resource" uid="uid://blc88hxvg3otq" path="res://entities/abilities/ability_models/seas_of_flame/seas_of_flame.tres" id="10_hsirj"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v7541"]
animation = &"rolling "

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2ly6u"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_55l3j"]
animation = &"rolling "

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_55l3j"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3n7t4"]
xfade_time = 0.3

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nnmdb"]
xfade_time = 0.3

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2hblk"]
xfade_time = 0.3

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hsirj"]
xfade_time = 0.3

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8q87k"]
xfade_time = 0.3

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lvw3e"]
xfade_time = 0.3

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_2hblk"]
states/Chase/node = SubResource("AnimationNodeAnimation_v7541")
states/Chase/position = Vector2(445, 222)
states/Idle/node = SubResource("AnimationNodeAnimation_2ly6u")
states/Idle/position = Vector2(386, 70.5)
states/Wander/node = SubResource("AnimationNodeAnimation_55l3j")
states/Wander/position = Vector2(585, 74.975)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_55l3j"), "Idle", "Chase", SubResource("AnimationNodeStateMachineTransition_3n7t4"), "Chase", "Idle", SubResource("AnimationNodeStateMachineTransition_nnmdb"), "Idle", "Wander", SubResource("AnimationNodeStateMachineTransition_2hblk"), "Wander", "Idle", SubResource("AnimationNodeStateMachineTransition_hsirj"), "Wander", "Chase", SubResource("AnimationNodeStateMachineTransition_8q87k"), "Chase", "Wander", SubResource("AnimationNodeStateMachineTransition_lvw3e")]
graph_offset = Vector2(169.65, 27.0375)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_hsirj"]
graph_offset = Vector2(-87.7063, 17.5557)
nodes/MovementStateMachine/node = SubResource("AnimationNodeStateMachine_2hblk")
nodes/MovementStateMachine/position = Vector2(170, 80)
nodes/output/position = Vector2(560, 100)
node_connections = [&"output", 0, &"MovementStateMachine"]

[sub_resource type="SphereShape3D" id="SphereShape3D_gbobm"]
radius = 4.25

[sub_resource type="ViewportTexture" id="ViewportTexture_8f7sg"]
viewport_path = NodePath("SubViewport")

[node name="BallChicken" node_paths=PackedStringArray("enemy_model") instance=ExtResource("1_oapbr")]
stats = ExtResource("2_v7541")
type = 1
enemy_model = NodePath("ball_chicken")

[node name="ball_chicken" parent="." index="0" instance=ExtResource("3_2hblk")]
transform = Transform3D(-7.64949e-08, -1.5299e-07, -1.75, 0, -1.75, 1.5299e-07, -1.75, 6.6874e-15, 7.64949e-08, 0, 2.5, 0)

[node name="Sphere" parent="ball_chicken" index="0"]
transform = Transform3D(-1.67408, 1.17, 0.988782, -1.33486, -0.395639, -1.79185, -0.751495, -1.90361, 0.980139, 0, 0, 0)

[node name="Sphere_001" parent="ball_chicken/Sphere" index="2"]
transform = Transform3D(0.348384, -0.0343357, 0.10284, -0.00766201, 0.337422, 0.138613, -0.108149, -0.134511, 0.32146, 0.186526, 0.724427, 0.0605452)

[node name="Sphere_002" parent="ball_chicken/Sphere" index="3"]
transform = Transform3D(0.211911, 0.0782602, 0.0580981, -0.0856663, 0.215863, 0.0216871, -0.0464907, -0.0410403, 0.224857, -0.219024, -0.459037, 0.689051)

[node name="Sphere_003" parent="ball_chicken/Sphere" index="4"]
transform = Transform3D(0.0526094, 0.0817232, -0.0396312, -0.034897, 0.0604717, 0.0783738, 0.083854, -0.0261064, 0.0574807, -0.692615, 0.641203, 0.189759)

[node name="Sphere_004" parent="ball_chicken/Sphere" index="5"]
transform = Transform3D(0.0381178, -0.19606, -0.116864, -0.156609, 0.0637277, -0.157994, 0.166044, 0.105115, -0.122188, -0.107312, 0.155136, 1.03637)

[node name="AnimationTree" type="AnimationTree" parent="ball_chicken" index="2"]
tree_root = SubResource("AnimationNodeBlendTree_hsirj")
anim_player = NodePath("../AnimationPlayer")

[node name="CollisionShape3D" parent="." index="1"]
transform = Transform3D(0.99771, 0, 0, 0, 0.99771, 0, 0, 0, 0.99771, 0, 2.5, 0)
shape = SubResource("SphereShape3D_gbobm")

[node name="HealthbarSprite" parent="." index="2"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 4.5, -1.5)
texture = SubResource("ViewportTexture_8f7sg")

[node name="HealthBar" parent="SubViewport" index="0"]
visible = false

[node name="AttackingArea" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)

[node name="MeleeWeapon" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.32256, 0.507973, -1.69485)

[node name="EnemyStateMachine" parent="." index="7" node_paths=PackedStringArray("starting_state", "animation_tree")]
starting_state = NodePath("Idle")
animation_tree = NodePath("../ball_chicken/AnimationTree")

[node name="Idle" type="Node" parent="EnemyStateMachine" index="0" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_8q87k")
chase_distance = 100.0
enemy = NodePath("../..")

[node name="Wander" type="Node" parent="EnemyStateMachine" index="1" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_2ly6u")
chase_distance = 100.0
state_type = 1
enemy = NodePath("../..")

[node name="Chase" type="Node" parent="EnemyStateMachine" index="2" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_lvw3e")
chase_distance = 100.0
state_type = 2
enemy = NodePath("../..")

[node name="DamageNumberHandler" parent="." index="9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, -4.5)
base_size = 200

[node name="EnemyAbilityController" type="Node3D" parent="." index="10" node_paths=PackedStringArray("enemy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
script = ExtResource("7_3n7t4")
enemy = NodePath("..")

[node name="EnemyAbilitySlot" type="Node3D" parent="EnemyAbilityController" index="0"]
script = ExtResource("8_nnmdb")
ability_resource = ExtResource("10_2hblk")

[node name="EnemyAbilitySlot2" type="Node3D" parent="EnemyAbilityController" index="1"]
script = ExtResource("8_nnmdb")
ability_resource = ExtResource("10_hsirj")

[connection signal="body_entered" from="AttackingArea" to="EnemyAbilityController" method="_on_attacking_area_body_entered"]

[editable path="ball_chicken"]
